--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.14.1",
     "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "toast": "^0.5.4",
