--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "framer-motion": "^11.3.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "rc-progress": "^4.0.0",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
