--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.12.2",
     "framer-motion": "^11.3.2",
     "i18next-browser-languagedetector": "^8.0.0",
+    "leaflet": "^1.9.4",
     "rc-progress": "^4.0.0",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
@@ -26,6 +27,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
