--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-gauge-component": "^1.2.62",
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
